[package]
name = "aliyun-oss-figure-bed"
version = "0.1.2"
edition = "2024"

[dependencies]
aliyun-oss-client = "0.12"                          # Verify the latest version on crates.io
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.41"
uuid = { version = "1.0", features = ["v4"] }
